apps/longhorn/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: longhorn-auth
  namespace: longhorn-system
spec:
  basicAuth:
    secret: longhorn-secret
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-route
  namespace: longhorn-system
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`longhorn.trivernis.net`)
    kind: Rule
    services:
    - name: longhorn-frontend
      port: 80
    middlewares:
      - name: longhorn-auth
